// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdentifiersSectionContainer component should render default view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(IdentifiersSection) />
</ContextProvider>
`;

exports[`IdentifiersSectionContainer component should render disabled view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(IdentifiersSection)
    disabled={true}
  />
</ContextProvider>
`;
